--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
     </header>
 
     <main class="grid grid-cols-1 md:grid-cols-3 gap-6">
-      <!-- Form tambah tugas -->
+       <!-- Form tambah tugas -->
       <section class="md:col-span-1 bg-white dark:bg-slate-800 p-4 rounded-2xl shadow">
         <h2 class="text-lg font-semibold mb-3">Tambah Kegiatan</h2>
         <form id="taskForm" class="space-y-3">
           <div>
-            <label class="block text-sm mb-1">Kegiatan</label>
-            <input id="taskName" type="text" required class="w-full px-3 py-2 rounded-lg border focus:outline-none focus:ring-2 focus:ring-primary bg-transparent" placeholder="Contoh: Belajar Matematika" />
+            <label class="block text-sm mb-1">Nama Kegiatan</label>
+            <input id="taskName" type="text" required class="w-full px-3 py-2 rounded-lg border focus:outline-none focus:ring-2 focus:ring-primary bg-transparent" />
           </div>
           <div>
             <label class="block text-sm mb-1">Waktu</label>
@@ -76,12 +76,26 @@
           </div>
           <div>
             <label class="block text-sm mb-1">Prioritas</label>
-            <!-- NOTE: values are lowercase for consistency -->
-            <select id="taskPriority" class="w-full px-3 py-2 rounded-lg border focus:outline-none focus:ring-2 focus:ring-primary bg-transparent">
-              <option value="low">Rendah</option>
-              <option value="medium" selected>Sedang</option>
-              <option value="high">Tinggi</option>
+            <select id="taskPriority" class="hidden" aria-hidden="true">
+              <option value="low">low</option>
+              <option value="medium" selected>medium</option>
+              <option value="high">high</option>
             </select>
+
+            <div class="radio-inputs" role="radiogroup" aria-label="Prioritas">
+              <label class="radio">
+                <input type="radio" name="taskPriorityRad" value="low" />
+                <div class="name">Rendah</div>
+              </label>
+              <label class="radio">
+                <input type="radio" name="taskPriorityRad" value="medium" checked />
+                <div class="name">Sedang</div>
+              </label>
+              <label class="radio">
+                <input type="radio" name="taskPriorityRad" value="high" />
+                <div class="name">Tinggi</div>
+              </label>
+            </div>
           </div>
           <div class="flex gap-2">
             <button type="submit" aria-label="Tambah tugas" class="flex-1 bg-primary text-white px-4 py-2 rounded-lg font-medium hover:scale-[1.02] transition-transform">Tambah</button>
@@ -96,12 +110,26 @@
         <div class="flex items-center justify-between mb-4">
           <h2 class="text-lg font-semibold">Daftar Kegiatan Hari Ini</h2>
           <div class="flex items-center gap-2">
-            <label class="text-sm">Urutkan:</label>
-            <select id="sortBy" class="px-2 py-1 rounded-lg border bg-transparent">
-              <option value="time">Waktu</option>
-              <option value="priority">Prioritas</option>
-              <option value="created">Terbaru</option>
+            <label class="text-sm mb-1">Urutkan : </label>
+            <select id="sortBy" class="hidden" aria-hidden="true">
+              <option value="time">time</option>
+              <option value="priority">priority</option>
+              <option value="created" selected>created</option>
             </select>
+            <div class="radio-inputs w-48" role="radiogroup" aria-label="Sort">
+              <label class="radio">
+                <input type="radio" name="sortByRad" value="time" />
+                <div class="name text-xs">Waktu</div>
+              </label>
+              <label class="radio">
+                <input type="radio" name="sortByRad" value="priority" />
+                <div class="name text-xs">Prioritas</div>
+              </label>
+              <label class="radio">
+                <input type="radio" name="sortByRad" value="created" checked />
+                <div class="name text-xs">Terbaru</div>
+              </label>
+            </div>
           </div>
         </div>
 
@@ -121,7 +149,7 @@
       </section>
     </main>
 
-  <!-- Modal Edit Task -->
+    <!-- Modal Edit Task -->
   <div id="editModal" 
      class="fixed inset-0 bg-black/40 hidden items-center justify-center z-50"
      role="dialog"
@@ -141,11 +169,25 @@
         </div>
         <div>
           <label class="block text-sm mb-1">Prioritas</label>
-          <select id="editPriority" class="w-full px-3 py-2 border rounded-lg focus:ring-2 focus:ring-primary bg-transparent">
-            <option value="low">Rendah</option>
-            <option value="medium">Sedang</option>
-            <option value="high">Tinggi</option>
+          <select id="editPriority" class="hidden" aria-hidden="true">
+            <option value="low">low</option>
+            <option value="medium">medium</option>
+            <option value="high">high</option>
           </select>
+          <div class="radio-inputs" role="radiogroup" aria-label="Edit Prioritas">
+            <label class="radio">
+              <input type="radio" name="editPriorityRad" value="low" />
+              <div class="name">Rendah</div>
+            </label>
+            <label class="radio">
+              <input type="radio" name="editPriorityRad" value="medium" />
+              <div class="name">Sedang</div>
+            </label>
+            <label class="radio">
+              <input type="radio" name="editPriorityRad" value="high" />
+              <div class="name">Tinggi</div>
+            </label>
+          </div>
         </div>
         <div class="flex gap-2">
           <button type="submit" class="flex-1 bg-primary text-white rounded-lg py-2">Simpan</button>
@@ -154,16 +196,40 @@
       </form>
     </div>
   </div>
-
   <div id="undoSnackbar" class="fixed bottom-6 left-1/2 -translate-x-1/2 bg-slate-800 dark:bg-slate-700 text-white px-6 py-3 rounded-lg shadow-xl hidden items-center gap-4 z-50 transition-all">
       <span>Form dikosongkan</span>
       <button id="undoBtn" class="text-primary font-medium hover:underline">UNDO</button>
-    </div>
   </div>
+</div>
+  <script>
+    (function(){
+      function syncSelectToRadios(selectId, radioName) {
+        const select = document.getElementById(selectId);
+        const radios = Array.from(document.querySelectorAll('input[name="'+radioName+'"]'));
+        if (!select || radios.length === 0) return;
 
-  
+        radios.forEach(r => r.checked = (r.value === select.value));
+        radios.forEach(r => r.addEventListener('change', () => {
+          if (r.checked) select.value = r.value;
+          const ev = new Event('change', { bubbles: true });
+          select.dispatchEvent(ev);
+        }));
+        let last = select.value;
+        setInterval(() => {
+          if (select.value !== last) {
+            last = select.value;
+            radios.forEach(r => r.checked = (r.value === select.value));
+          }
+        }, 150);
+      }
 
+      document.addEventListener('DOMContentLoaded', function(){
+        syncSelectToRadios('taskPriority', 'taskPriorityRad');
+        syncSelectToRadios('editPriority', 'editPriorityRad');
+        syncSelectToRadios('sortBy', 'sortByRad');
+      });
+    })();
+  </script>
   <script src="script.js"></script>
 </body>
-
 </html>
